# contractor-os

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scratch.py  test_config.py  test_out.txt
app/: main.py
app/api/: routes_leads.py  routes_orchestration.py  routes_pipeline.py  routes_runs.py  routes_signals.py  routes_ui.py
app/core/: config_loader.py  db.py  exceptions.py  llm_router.py  logger.py  models.py  scheduler.py
app/tests/: conftest.py  test_api.py  test_craft.py  test_craft_prompts.py  test_crm_orchestrator.py  test_dashboard_api.py  test_hunter_apify.py  test_hunter_dedup.py  test_hunter_email_fallback.py  test_hunter_run.py  test_hunter_sources.py  test_llm_router.py  test_negotiator.py  test_outreach.py  test_outreach_scheduling.py  test_pipeline_transitions.py  test_profiler.py  test_profiler_linkedin.py  test_profiler_scrapling.py  (+2 more)
config/: outreach.yaml  profile.yaml  services.yaml  system.yaml  targets.yaml
contractor_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: workflow.json
docs/: n8n_example_workflow.json
scripts/: backup_db.py  check_leads.py  force_run.py  init_db.py  inspect_scrapling.py  migrate_sending_identity.py  reset_drafts.py  reset_leads.py  reset_test_leads.py  run_cycle.py  seed_test_leads.py  send_test_followup.py  test_apify_actors.py  test_linkedin.py  test_spider.py  vacuum_db.py  verify_7a.py  verify_7b.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4_live.py  verify_production.py  verify_sqlite_hardening.py  watch_emails.py
(+40 files in other folders)
